# Color-Stamp-Removal

./: CMakeLists.txt  GeneralFunctions.cpp  GeneralFunctions.h  Image_proc_functions.cpp  Image_proc_functions.h  PixelValidation.cpp  PixelValidation.h  ScalarColorFeature.cpp  ScalarColorFeature.h  StandardHeaders.h  binarization.cpp  binarization.h  color_stamp_removal.cpp  color_stamp_removal.h  folder.cpp  folder.h  readme.txt  stamp_removal.cpp
example/: readme.txt  schema_ocr.xsd  stampr
example/INPUT/: ex31.xml
example/OUTPUT/: ex31_out.xml
xml/: xml.cpp  xml.cpp~  xml.h  xml.h~
xml/xml_Lib_src/: Makefile
